supervisor middleware and update user for admin added
